fix: the cut off of the search results pop up is healed

--- a/src/app/admin/overlay-container/visibility-room/visibility-room.component.scss
+++ b/src/app/admin/overlay-container/visibility-room/visibility-room.component.scss
@@ -11,6 +11,7 @@
   border-radius: 10px;
   min-height: 70px;
   min-width: 470px;
+  margin: auto 30px;// to resemble the other options
   .label {
     color: $navy;
     font-size: 15px;
